# advent-of-code2022

./: .gitignore  CMakeLists.txt  README.md  code-formatter.py  main.cpp
include/: CalorieCounter.hpp  CampCleanup.hpp  FileReader.hpp  RockPaperScissors.hpp  RucksackReorganization.hpp  Solution.hpp  SupplyStacks.hpp  TuningTrouble.hpp
src/: CalorieCounter.cpp  CampCleanup.cpp  FileReader.cpp  RockPaperScissors.cpp  RucksackReorganization.cpp  Solution.cpp  SupplyStacks.cpp  TuningTrouble.cpp
